# flaschengeist

./: .gitignore  .gitmodules  .ycm_extra_conf.py  Makefile  README.md  tags  wlan.conf
.pioenvs/: .sconsign.dblite  structure.hash
.pioenvs/wemos_d1_mini/: firmware.elf
.piolibdeps/ArduinoJson_ID64/: .library.json
.piolibdeps/ESPAsyncTCP_ID305/: .library.json
.piolibdeps/NeoPixelBus_ID547/: .library.json
arduino/: CMakeLists.txt
arduino/sources/: CMakeLists.txt
arm/: CMakeLists.txt  hint
arm/b/: CMakeCache.txt  Makefile  cmake_install.cmake
arm/b/sources/: Makefile  cmake_install.cmake  controller  controller_automoc.cpp  moc_lightcontroller.cpp
arm/sources/: CMakeLists.txt  lightcontroller.cpp  lightcontroller.hpp  lightcontrollergui.html  main.cpp
flaschengeist/: .gcc-flags.json  .vimrc  .ycm_extra_conf.py  platformio.ini
flaschengeist/.pioenvs/: .sconsign.dblite  structure.hash
flaschengeist/.pioenvs/wemos_d1_mini/: firmware.elf
flaschengeist/.piolibdeps/NeoPixelBus_ID547/: .library.json
flaschengeist/lib/TickerScheduler/: README.html
flaschengeist/src/: flaschengeist.cpp  network.cpp  network.h  strip.cpp  strip.h  strip_prog.cpp  web.cpp  web.h  wifi.cpp  wifi.h
flurlampe/: .clang_complete  .vimrc  .ycm_extra_conf.py
flurlampe/.pioenvs/: .sconsign.dblite  structure.hash
flurlampe/old/: makeligt_wifi_ledonfo.cpp
flurlampe/src/: led.cpp  makelight.cpp
platformio/: platformio.ini
platformio/src/: led.cpp  led.h  light_fade.cpp  makelight.cpp
schematic/: hint
src/: flaschengeist.cpp  web.h  wifi.cpp
wiki/: index.wiki
(+1 files in other folders)
